Update copyright. Review changes. Add response object to increase future forward compatibility.